--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -11,11 +11,14 @@ greenlet==2.0.2
 h11==0.14.0
 idna==3.4
 passlib==1.7.4
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pyasn1==0.5.0
 pycparser==2.21
 pydantic==2.3.0
 pydantic_core==2.6.3
-python-dotenv
+pydevd==2.10.0
+python-dotenv==1.0.0
 python-jose==3.3.0
 python-multipart==0.0.6
 rsa==4.9
@@ -24,4 +27,4 @@ sniffio==1.3.0
 SQLAlchemy==2.0.15
 starlette==0.27.0
 typing_extensions==4.7.1
-uvicorn
+uvicorn==0.23.2
