--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -18,6 +18,7 @@ pycparser==2.21
 pydantic==2.3.0
 pydantic_core==2.6.3
 pydevd==2.10.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
 python-jose==3.3.0
 python-multipart==0.0.6
